@@ -2,9 +2,9 @@
  * Exercise 11 - Reusable validation with private methods
  *
  * Purpose:
- * This exercise improves the previous manual validation by moving
- * the validation logic into private methods. This keeps the controller
- * cleaner and prepares the code for a future layered architecture.
+ * This exercise improves the previous manual validation by extracting
+ * repeated validation logic into private methods. This makes the controller
+ * cleaner and easier to maintain.
  *
  * URL:
  * http://localhost:8080/exercise11/students
@@ -22,48 +22,64 @@ import org.springframework.web.bind.annotation.RestController;
 public class StudentReusableValidationController {
     
     @PostMapping("/exercise11/students")
-    public ResponseEntity<?> createStudent(@RequestBody StudentRequest request) {
+    public ResponseEntity<?> createStudent(@RequestBody CreateStudentRequest request) {
         
-        if (hasInvalidRequiredFields(request)) {
-            return buildBadRequestResponse("Name and role are required");
-        }
+        if (isBlank(request.name())) { return badRequest("The student name is required!"); }
+        if (isBlank(request.role())) { return badRequest("The student role is required!"); }
 
         StudentResponse response = new StudentResponse(
+            1,
             request.name(),
-            request.role(),
-            "Student created successfully"
+            request.role()
         );
 
-        return ResponseEntity
-            .status(HttpStatus.CREATED)
-            .body(response);
+        return new ResponseEntity<>(response, HttpStatus.CREATED);
     }
 
-    // Checks whether the request contains invalid mandatory fields.
-    private boolean hasInvalidRequiredFields(StudentRequest request) {
-        return request == null
-            || isBlank(request.name())
-            || isBlank(request.role());
-    }
-
-    // Checks whether a text value is null, emp`ty or only spaces.
     private boolean isBlank(String value) {
-        return value == null || value.trim().isEmpty();
+        return value == null || value.isBlank();
     }
 
-    // Builds a reusable HTTP 400 Bad Request response
-    private ResponseEntity<ErrorResponse> buildBadRequestResponse(String message) {
-        ErrorResponse error = new ErrorResponse(
-                HttpStatus.BAD_REQUEST.value(),
-                message
+    // Builds a reusable bad request response
+    private ResponseEntity<ErrorResponse> badRequest(String message) {
+        return new ResponseEntity<>(
+            new ErrorResponse(message),
+            HttpStatus.BAD_REQUEST
         );
-
-        return ResponseEntity
-                .status(HttpStatus.BAD_REQUEST)
-                .body(error);
     }
-
-    public record StudentRequest(String name, String role) {}
-    public record StudentResponse(String name, String role, String message) {}
-    public record ErrorResponse(int status, String message) { }
+    // Defines de data expected from the request body
+    public record CreateStudentRequest(String name, String role) {}
+    // Defines the successfull response model
+    public record StudentResponse(int id, String name, String role) {}
+    // Defines the error response model
+    public record ErrorResponse(String message) {}
 }
+
+/*
+Invoke-RestMethod `
+  -Uri "http://localhost:8080/exercise11/students" `
+  -Method Post `
+  -ContentType "application/json" `
+  -Body '{"name":"Angel","role":"backend"}'
+   */
+
+
+  // BAD REQUEST
+  /*
+  $body = @{
+    name = ""
+    role = "backend"
+} | ConvertTo-Json
+
+try {
+    Invoke-WebRequest `
+      -Uri "http://localhost:8080/exercise11/students" `
+      -Method Post `
+      -ContentType "application/json" `
+      -Body $body
+}
+catch {
+    $reader = New-Object System.IO.StreamReader($_.Exception.Response.GetResponseStream())
+    $reader.ReadToEnd()
+}
+    */
